# Passenger-Flow-Prediction-CABA

./: .gitignore  Backfill1.ipynb  Extractor.ipynb  Feature_pipeline.ipynb  Inference_pipeline.ipynb  LICENSE  Notebook_for_debugging.ipynb  README.md  Training.ipynb  Training_pipeline.ipynb  Untitled.ipynb  environment.yml  feature_pipeline.ipynb  frontend_plotly_upd.py  inference_pipeline.ipynb  inference_pipeline.nbconvert.ipynb  line_c_w_counts.csv  pyproject.toml  requirements.txt  training_pipeline.ipynb
.devcontainer/: devcontainer.json
.github/workflows/: feature_pipeline.yml  inference_pipeline.yml
.streamlit/: secrets.toml
models/: model.pkl  model_222324.pkl
notebooks/: feature_pipeline.ipynb  feature_pipeline.nbconvert.ipynb
src/: config.py  config_st.py  data.py  data_split.py  data_training.py  feature_store_api.py  feature_store_api_st.py  inference.py  inferencesm.py  inferencesm_st.py  model.py  model_registry.py  monitoring.py  paths.py
