[tool.poetry]
name = "passenger-flow-predictor"
version = "0.1.0"
description = ""
authors = ["simon.montt <simon.montt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
pandas = "<2.2.0"
jupyter = "^1.0.0"
requests = "^2.31.0"
tqdm = "^4.66.1"
plotly = "^5.16.1"
scikit-learn = "^1.3.0"
xgboost = "^1.7.6"
lightgbm = "^4.0.0"
optuna = "^3.3.0"
wget = "^3.2"
geopandas = "^0.14.0"
streamlit = {version = "^1.28.0", python = ">=3.9,<3.9.7 || >3.9.7,<4.0"}
pydeck = "^0.8.0"
comet-ml = "^3.38.0"
numpy = "<2"
sqlalchemy = "<=1.4.48"
hopsworks = {version = "3.7.0", python = ">=3.9,<3.13"}
holidays = "^0.27"
urllib3 = ">=1.25.4,<1.27"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
